--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "flowbite-react": "^0.7.3",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
+    "react-datepicker": "^6.6.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-jwt": "^1.2.1",
