--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-jwt": "^1.2.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
